welcome.lessons.welcome.traversal.zigzag.TraversalZigZag.scala.error
ZigZag:8: error: reassignment to val
	do{setPos(i,j);j = j + 1;ecritMessage(y);y = y + 1;}while(i == 0 | i == 2 | i == 4 | i==6)
                         ^ZigZag:9: error: reassignment to val
	do{j = 6 - j;setPos(i,j);ecritMessage(y);y = y + 1;}while(i == 1 | i == 3 | i == 5 | i==7)
             ^