welcome.lessons.welcome.traversal.zigzag.TraversalZigZag.scala.code
override def run() {
var x = getMondeHauteur();
var y = 0;
var z = getMondeLargeur;
var j = 0;
for (i <- 0 to x-1){
	for (j <- 0 to z-1){
	do{setPos(i,j);j = j + 1;ecritMessage(y);y = y + 1;}while(i == 0 | i == 2 | i == 4 | i==6)
	do{j = 6 - j;setPos(i,j);ecritMessage(y);y = y + 1;}while(i == 1 | i == 3 | i == 5 | i==7)
	}
}
}
